2009-02-13  Alejandro G. Castro  <alex@igalia.com>

	This patch was applied before but reverted because it caused
	problems, we have changed the main condition and tested the
	regressions we detected before and they work ok.

        * src/hildon-pannable-area.c,
        (hildon_pannable_area_get_topmost): Added a new parameter to
        filter the the windows that do not include those events. Added
        also a condition when finding the window to filter windows that do
        not ask for those events.
        (hildon_pannable_area_button_press_cb),
        (hildon_pannable_area_button_release_cb),
        (hildon_pannable_get_child_widget_at): Reviewed the call the the
        topmost function, we have added the new parameter.

        Fixes: NB#97458 (Pannable area prevents propagation of button
        press events)

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/check-hildon-color-button.c (START_TEST): do not leak
	ret_color.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-font-selection-dialog.c
	(hildon_font_selection_dialog_get_preview_text): Return NULL
	instead of FALSE on the g_return_val_if_fail().

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-time-selector.c (hildon_time_selector_set_time):
	* src/hildon-date-selector.c
	(hildon_date_selector_select_current_date):
	Do not compare unsigned integers to be greater than or equal 0,
	because it's always TRUE.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c (hildon_date_selector_construct_ui),
	(hildon_date_selector_constructor): Do not select the current
	date until we are handle the "changed" signal, to avoid having bogus
	elements in the days model.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c (_update_day_model): Use a gint variable
	for num_days, since _month_days() can return a negative value.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>
